--- a/docs/cobra_2020_part2.ipynb
+++ b/docs/cobra_2020_part2.ipynb
@@ -14,7 +14,9 @@
    "outputs": [],
    "source": [
     "import cobra\n",
-    "from cobra.test import create_test_model\n",
+    "from cobra.io import read_sbml_model\n",
+    "import importlib_resources\n",
+    "\n",
     "from cobra.flux_analysis import pfba\n",
     "from cobra.flux_analysis import flux_variability_analysis as fva\n",
     "\n",
@@ -28,8 +30,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = create_test_model(\"textbook\")\n",
-    "iJO1366 = create_test_model(\"ecoli\")"
+    "cobra_data_dir = importlib_resources.files(cobra.data)\n",
+    "\n",
+    "textbook_sbml = str((cobra_data_dir / \"textbook.xml.gz\").resolve())\n",
+    "model = read_sbml_model(textbook_sbml)\n",
+    "\n",
+    "ecoli_sbml = str((cobra_data_dir / \"iJO1366.xml.gz\").resolve())\n",
+    "iJO1366 = read_sbml_model(ecoli_sbml)"
    ]
   },
   {
