--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "# load modules\n",
-    "from cobra.test import create_test_model\n",
-    "import cobra"
+    "import cobra\n",
+    "from cobra.test import create_test_model"
    ]
   },
   {
