--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "# load modules\n",
     "import cobra\n",
-    "from cobra.test import create_test_model"
+    "from cobra.io import read_sbml_model\n",
+    "import importlib_resources"
    ]
   },
   {
@@ -61,17 +62,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "help(create_test_model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# load a cobra model that was downloaded with the cobrapy package\n",
-    "model = create_test_model(\"textbook\")"
+    "cobra_data_dir = importlib_resources.files(cobra.data)\n",
+    "\n",
+    "textbook_sbml = str((cobra_data_dir / \"textbook.xml.gz\").resolve())\n",
+    "model = read_sbml_model(textbook_sbml)"
    ]
   },
   {
