--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -983,7 +983,7 @@
    "source": [
     "# change default solver\n",
     "cobra_config.solver = \"scipy\"\n",
-    "new_model = create_test_model(\"textbook\")\n",
+    "new_model = read_sbml_model(textbook_sbml)\n",
     "new_model.solver"
    ]
   },
