--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -42,8 +42,7 @@
    "source": [
     "# load modules\n",
     "import cobra\n",
-    "from cobra.io import read_sbml_model\n",
-    "import importlib_resources"
+    "from cobra.io import load_model"
    ]
   },
   {
@@ -62,11 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load a cobra model that was downloaded with the cobrapy package\n",
-    "cobra_data_dir = importlib_resources.files(cobra.data)\n",
-    "\n",
-    "textbook_sbml = str((cobra_data_dir / \"textbook.xml.gz\").resolve())\n",
-    "model = read_sbml_model(textbook_sbml)"
+    "model = load_model(\"textbook\")"
    ]
   },
   {
@@ -983,8 +978,7 @@
    "source": [
     "# change default solver\n",
     "cobra_config.solver = \"scipy\"\n",
-    "new_model = read_sbml_model(textbook_sbml)\n",
-    "new_model.solver"
+    "new_model = load_model(\"textbook\")"
    ]
   },
   {
