--- a/docs/cobra_2020_part2.ipynb
+++ b/docs/cobra_2020_part2.ipynb
@@ -14,8 +14,7 @@
    "outputs": [],
    "source": [
     "import cobra\n",
-    "from cobra.io import read_sbml_model\n",
-    "import importlib_resources\n",
+    "from cobra.io import load_model\n",
     "\n",
     "from cobra.flux_analysis import pfba\n",
     "from cobra.flux_analysis import flux_variability_analysis as fva\n",
@@ -30,13 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cobra_data_dir = importlib_resources.files(cobra.data)\n",
-    "\n",
-    "textbook_sbml = str((cobra_data_dir / \"textbook.xml.gz\").resolve())\n",
-    "model = read_sbml_model(textbook_sbml)\n",
-    "\n",
-    "ecoli_sbml = str((cobra_data_dir / \"iJO1366.xml.gz\").resolve())\n",
-    "iJO1366 = read_sbml_model(ecoli_sbml)"
+    "model = load_model(\"textbook\")\n",
+    "iJO1366 = load_model(\"iJO1366\")"
    ]
   },
   {
@@ -127,7 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from cobra.flux_analysis import (\n",
     "    single_gene_deletion, single_reaction_deletion, double_gene_deletion,\n",
     "    double_reaction_deletion)\n",
