--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -18,7 +18,7 @@
     "## Solvers\n",
     "1. Gurobi http://www.gurobi.com\n",
     "2. cplex https://www.ibm.com/products/ilog-cplex-optimization-studio\n",
-    "3. scipy\n",
+    "3. glpk\n",
     "\n",
     "To install `cobrapy`, run the following code below (requires pip):"
    ]
@@ -977,7 +977,7 @@
    "outputs": [],
    "source": [
     "# change default solver\n",
-    "cobra_config.solver = \"scipy\"\n",
+    "cobra_config.solver = \"glpk_exact\"\n",
     "new_model = load_model(\"textbook\")"
    ]
   },
