--- a/docs/cobra_2020_part1.ipynb
+++ b/docs/cobra_2020_part1.ipynb
@@ -1033,10 +1033,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flux balance analysis(FBA)"
+    "## Flux balance analysis (FBA)"
    ]
   },
   {
